Quorum3/Library/Tests/TypeCheckerGenerated/Fail/RetAssignNumberUndefinedField.quorum
class Main
    number v = Test()
    action Main
    end

    action Test() returns number
        return undefined
    end
end